fixed tooltip bug on mobile devices

--- a/src/components/UI/Tooltip/Tooltip.module.scss
+++ b/src/components/UI/Tooltip/Tooltip.module.scss
@@ -1,28 +1,36 @@
-.tooltip__container {
-  position: relative;
-  display: inline-block;
-  max-width: 100%;
-}
+@use 'styles/base/colors' as colors;
+@use 'styles/mixins/responsive' as responsive;
 
 .tooltip {
   position: absolute;
   top: 100%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: #333;
+  background-color: colors.$text;
+  white-space: nowrap;
   color: #fff;
   padding: 8px 12px;
   border-radius: 4px;
   font-size: 14px;
-  white-space: nowrap;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
   z-index: 10;
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.2s ease;
-}
 
-.tooltip__container:hover .tooltip {
-  opacity: 1;
-  visibility: visible;
+  @include responsive.xxs {
+    white-space: normal;
+    width: calc(100dvw - 16px);
+  }
+
+  &__container {
+    position: relative;
+    display: inline-block;
+    max-width: 100%;
+  }
+
+  &__container:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+  }
 }
